# proteusllp-optimisation-package

./: .gitignore  .readthedocs.yaml  .vulture_whitelist.py  CLA.md  CONTRIBUTING.md  DEPLOYMENT_PLAN.md  Dockerfile.cpu  Dockerfile.gpu  Makefile  README.md  STYLE_GUIDE.md  proteusllp_actuarial_library-0.2.8.dev10+g27c24bb-py3-none-any.whl  pyproject.toml  pyrightconfig.json  pytest.ini
.devcontainer/: README.md
.devcontainer/cpu/: devcontainer.json
.devcontainer/gpu/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yaml  dependabot-pdm.yml
docs/source/: conf.py  index.md  installation.md  quickstart.md
examples/: README.md  simple_portfolio.py
optimizer/: README.md  __init__.py  config.py  efficient_frontier.py  models.py  scipy_interface.py  transforms.py
pop/: README.md
tests/: test_composite_metrics.py  test_efficient_frontier.py  test_freqsev_constraints.py  test_integration.py  test_metric_calculations.py  test_metric_functions_with_simulations.py  test_models.py  test_simple_optimization.py
