[project]
name = "proteusllp-optimisation-package"
dynamic = ["version"]
description = "Proteus Optimisation Package (POP): Domain-agnostic stochastic optimization engine for PAL variables"
authors = [
    {name = "Proteus LLP", email = "info@proteusllp.com"}
]
maintainers = [
    {name = "Proteus LLP", email = "info@proteusllp.com"}
]
readme = "README.md"
license = {text = "MIT License"}
keywords = ["optimization", "stochastic", "portfolio", "risk-analysis", "PAL", "actuarial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.13"
dependencies = [
    # === TEMPORARY DEV SETUP - REMOVE BEFORE PUBLISHING ===
    # Local PAL for development (mounted at /pal-local in devcontainer)
    "proteusllp-actuarial-library @ file:///pal-local",
    # When PAL 0.2.8 is published, DELETE the line above and UNCOMMENT below:
    # "proteusllp-actuarial-library>=0.2.8",
    # === END TEMPORARY DEV SETUP ===
    "numpy>=2.2",
    "scipy>=1.15",
    "pydantic>=2.0",
    "cvxopt",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.1",
    "sphinx-autodoc-typehints>=3.5.2",
]

[project.urls]
Homepage = "https://github.com/ProteusLLP/proteusllp-optimisation-package"
Repository = "https://github.com/ProteusLLP/proteusllp-optimisation-package"
Issues = "https://github.com/ProteusLLP/proteusllp-optimisation-package/issues"
Documentation = "https://proteusllp-optimisation-package.readthedocs.io/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# Static analysis tool configurations
[tool.ruff]
line-length = 88
target-version = "py313"
src = ["optimizer"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle (docstring linting)
    "N",   # pep8-naming
    "S",   # bandit (security)
]
ignore = [
    "D105", # Missing docstring in magic method
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D103"] # Allow assert and skip test function docstrings
"examples/*" = ["D"]       # Skip docstrings in examples

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=optimizer --cov-report=term-missing"

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
dev = [
    "ruff>=0.14.10",
]
